--- a/sdks/opik_optimizer/Makefile
+++ b/sdks/opik_optimizer/Makefile
@@ -1,24 +1,9 @@
 # Simple task shortcuts for local development.
 
 VENV ?= .venv
-VENV_PY := $(VENV)/bin/python
-VENV_PRECOMMIT := $(VENV)/bin/pre-commit
-
-ifeq ($(wildcard $(VENV_PY)),)
-PYTHON ?= python3
+PYTHON ?= $(VENV)/bin/python
 PIP ?= $(PYTHON) -m pip
-PRECOMMIT ?= pre-commit
-else
-PYTHON ?= $(VENV_PY)
-PIP ?= $(PYTHON) -m pip
-PRECOMMIT ?= $(VENV_PRECOMMIT)
-endif
-
-define warn_if_no_venv
-@if [ ! -f "$(VENV_PY)" ]; then \
-  echo "[warn] Virtual environment $(VENV) not found; using system-level interpreters/tools."; \
-fi
-endef
+PRECOMMIT ?= $(VENV)/bin/pre-commit
 
 .DEFAULT_GOAL := help
 
@@ -39,25 +24,20 @@ setup-venv:
 	python3 -m venv $(VENV)
 
 install:
-	$(call warn_if_no_venv)
 	$(PIP) install .
 
 install-dev:
-	$(call warn_if_no_venv)
+	$(PIP) install .[dev]
 	# $(PRECOMMIT) install
-	$(PIP) install '.[dev]'
 
 # Disable LiteLLM disk cache to avoid RO sqlite errors during tests.
 test:
-	$(call warn_if_no_venv)
 	PYTHONPATH=src LITELLM_CACHE_TYPE=memory $(PYTHON) -m pytest --cov=opik_optimizer --cov-report=term-missing --cov-report=xml --cov-report=html
 
 precommit:
-	$(call warn_if_no_venv)
 	PYTHONPATH=src $(PRECOMMIT) run --all-files
 
 build:
-	$(call warn_if_no_venv)
 	$(PYTHON) setup.py sdist bdist_wheel
 
 clean:
