--- a/sdks/opik_optimizer/pyproject.toml
+++ b/sdks/opik_optimizer/pyproject.toml
@@ -1,19 +1,21 @@
 [project]
 name = "opik_optimizer"
-version = "2.2.1"
+version = "1.1.0"
 description = "Agent optimization with Opik"
 authors = [
     {name = "Comet ML", email = "support@comet.com"}
 ]
 license = {text = "Apache 2.0"}
 readme = "README.md"
-requires-python = ">=3.10,<3.14"
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "datasets",
     "deap>=1.4.3",
-    "gepa>=0.0.7",
+    "diskcache",
+    "dspy<3",
+    "ujson",
     "hf_xet",
-    "litellm<=1.75.6",
+    "litellm",
     "mcp>=1.0.0",
     "opik>=1.7.17",
     "optuna",
@@ -30,8 +32,8 @@ dev = [
     "pytest-cov",
     # "google-adk",
     "langgraph",
+    "gepa>=0.0.7",
     "pre-commit",
-    "scikit-learn",
 ]
 
 [tool.setuptools.packages.find]
@@ -50,7 +52,7 @@ ignore_missing_imports = true
 disallow_untyped_defs = true
 disallow_untyped_calls = true
 check_untyped_defs = true
-exclude = ["src/opik_optimizer/mipro_optimizer/"]
+exclude = "src/opik_optimizer/mipro_optimizer/"
 
 [tool.uv]
 managed = false
