--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -212,6 +212,13 @@ batchOperations:
     # Description: The maximal number of ids to be used for IN clause. Find requests with a larger number of ids will
     # involve the use of temp tables for querying
     maxExperimentInClauseSize: ${BATCH_OPERATIONS_MAX_EXPERIMENT_IN_CLAUSE_SIZE:-5000}
+  analytics:
+    # Default: 100
+    # Description: Chunk size for bulk update operations (traces, spans, threads). ClickHouse performs best with batch sizes of 100-1000 records per query.
+    bulkUpdateChunkSize: ${BATCH_OPERATIONS_BULK_UPDATE_CHUNK_SIZE:-100}
+    # Default: 1000
+    # Description: Buffer size for streaming operations to batch records for efficient processing
+    streamBufferSize: ${BATCH_OPERATIONS_STREAM_BUFFER_SIZE:-1000}
 
 # Configuration for rate limit. This is not enabled by default for open source installations.
 # If enabled, rate limit is applied to creation and update of various entities including traces, spans, projects,
