--- a/.github/workflows/end2end_suites.yml
+++ b/.github/workflows/end2end_suites.yml
@@ -66,7 +66,7 @@ jobs:
                 OPIK_USAGE_REPORT_ENABLED: false
               run: |
                 cd ${{ github.workspace }}
-                TOGGLE_WELCOME_WIZARD_ENABLED="false" TOGGLE_COMET_DEBUGGER_MODE_ENABLED="false" ./opik.sh --build
+                TOGGLE_WELCOME_WIZARD_ENABLED="false" ./opik.sh --build
                 
             - name: Check Docker pods are up (Local)
               run: |
