--- a/apps/opik-documentation/documentation/fern/docs.yml
+++ b/apps/opik-documentation/documentation/fern/docs.yml
@@ -625,74 +625,150 @@ navigation:
             slug: opentelemetry
   - tab: agent-optimization
     layout:
-      - section: Overview
-        skip-slug: true
+      - section: Getting Started
+        slug: /
         contents:
           - page: Opik Agent Optimizer
             icon: fa-regular fa-house
             path: docs/agent_optimization/overview.mdx
             slug: overview
-          - page: Optimizer Concepts
-            icon: fa-regular fa-lightbulb
-            path: docs/agent_optimization/opik_optimizer/concepts.mdx
-          - page: Multi-Metric Optimization
-            icon: fa-regular fa-chart-line
-            path: docs/agent_optimization/best_practices/multi_metric_optimization.mdx
+          - page: Quickstart
+            icon: fa-regular fa-bolt
+            path: docs/agent_optimization/getting_started/quickstart.mdx
+            slug: quickstart
+          - page: Quickstart notebook
+            icon: fa-regular fa-play
+            path: docs/agent_optimization/getting_started/quickstart_notebook.mdx
+            slug: quickstart_notebook
+          - page: Roadmap
+            icon: fa-regular fa-map
+            path: docs/agent_optimization/getting_started/roadmap.mdx
+            slug: roadmap
           - page: FAQ
             icon: fa-regular fa-question
             path: docs/agent_optimization/opik_optimizer/faq.mdx
-          - page: API Reference
-            icon: fa-regular fa-square-terminal
-            path: docs/agent_optimization/opik_optimizer/reference.mdx
+            slug: faq
+          - page: Changelog
+            icon: fa-regular fa-calendar
+            path: docs/agent_optimization/getting_started/changelog.mdx
+            slug: changelog
+      - section: Optimization
+        slug: /optimization
+        contents:
+          - page: Concepts
+            icon: fa-regular fa-lightbulb
+            path: docs/agent_optimization/opik_optimizer/concepts.mdx
+            slug: concepts
+          - page: Define datasets
+            icon: fa-regular fa-database
+            path: docs/agent_optimization/optimization/define_datasets.mdx
+            slug: define_datasets
+          - page: Define metrics
+            icon: fa-regular fa-chart-line
+            path: docs/agent_optimization/optimization/define_metrics.mdx
+            slug: define_metrics
+          - page: Optimize prompts
+            icon: fa-regular fa-wand-magic-sparkles
+            path: docs/agent_optimization/optimization/optimize_prompts.mdx
+            slug: optimize_prompts
+          - page: Optimize tools
+            icon: fa-regular fa-screwdriver-wrench
+            path: docs/agent_optimization/optimization/optimize_tools.mdx
+            slug: optimize_tools
+          - page: Optimize agents
+            icon: fa-regular fa-diagram-project
+            path: docs/agent_optimization/optimization/optimize_agents/overview.mdx
+            slug: optimize_agents
+          - section: Agent integrations
+            skip-slug: true
+            collapsed: true
+            contents:
+              - page: LangGraph
+                path: docs/agent_optimization/optimization/optimize_agents/langgraph.mdx
+                slug: optimize_langgraph
+              - page: Google ADK
+                path: docs/agent_optimization/optimization/optimize_agents/google_adk.mdx
+                slug: optimize_google_adk
+              - page: OpenAI Agents (coming soon)
+                path: docs/agent_optimization/optimization/optimize_agents/openai_agents.mdx
+                slug: optimize_openai_agents
+          - page: Optimize MCP
+            icon: fa-regular fa-diagram-cells
+            path: docs/agent_optimization/optimization/optimize_mcp.mdx
+            slug: optimize_mcp
+          - page: Optimize multimodal
+            icon: fa-regular fa-image
+            path: docs/agent_optimization/optimization/optimize_multimodal.mdx
+            slug: optimize_multimodal
+          - page: Dashboard results
+            icon: fa-regular fa-chart-simple
+            path: docs/agent_optimization/optimization/dashboard_results.mdx
+            slug: dashboard_results
       - section: Optimization Algorithms
         slug: /algorithms
         contents:
-          - page: Evolutionary
-            icon: fa-regular fa-puzzle-piece
-            path: docs/agent_optimization/algorithms/evolutionary_optimizer.mdx
-            slug: evolutionary_optimizer
-          - page: Few-Shot Bayesian
-            icon: fa-regular fa-puzzle-piece
-            path: docs/agent_optimization/algorithms/fewshot_bayesian_optimizer.mdx
-            slug: fewshot_bayesian_optimizer
-          - page: GEPA
-            icon: fa-regular fa-puzzle-piece
-            path: docs/agent_optimization/algorithms/gepa_optimizer.mdx
-            slug: gepa_optimizer
-          - page: Hierarchical Reflective
-            icon: fa-regular fa-puzzle-piece
-            path: docs/agent_optimization/algorithms/hierarchical_reflective_optimizer.mdx
-            slug: hierarchical_reflective_optimizer
+          - page: Overview
+            icon: fa-regular fa-list
+            path: docs/agent_optimization/algorithms/overview.mdx
+            slug: overview
           - page: MetaPrompt
             icon: fa-regular fa-puzzle-piece
             path: docs/agent_optimization/algorithms/metaprompt_optimizer.mdx
             slug: metaprompt_optimizer
+          - page: Hierarchical Reflective
+            icon: fa-regular fa-puzzle-piece
+            path: docs/agent_optimization/algorithms/hierarchical_reflective_optimizer.mdx
+            slug: hierarchical_reflective_optimizer
+          - page: Few-Shot Bayesian
+            icon: fa-regular fa-puzzle-piece
+            path: docs/agent_optimization/algorithms/fewshot_bayesian_optimizer.mdx
+            slug: fewshot_bayesian_optimizer
+          - page: Evolutionary
+            icon: fa-regular fa-puzzle-piece
+            path: docs/agent_optimization/algorithms/evolutionary_optimizer.mdx
+            slug: evolutionary_optimizer
+          - page: GEPA
+            icon: fa-regular fa-puzzle-piece
+            path: docs/agent_optimization/algorithms/gepa_optimizer.mdx
+            slug: gepa_optimizer
           - page: Parameter
             icon: fa-regular fa-puzzle-piece
             path: docs/agent_optimization/algorithms/parameter_optimizer.mdx
             slug: parameter_optimizer
-          - page: Tool Signature (MCP & Functions)
-            icon: fa-regular fa-tools
-            path: docs/agent_optimization/algorithms/tool_optimization.mdx
-            slug: tool_optimization
-      - section: Example Projects and Cookbooks
-        slug: /optimizer-cookbooks
+      - section: Cookbooks & Tutorials
+        slug: /cookbooks
         contents:
-          - page: Introduction Example
+          - page: Optimizer introduction
             icon: fa-regular fa-book
             path: docs/agent_optimization/cookbook/optimizer_introduction_cookbook.mdx
             slug: optimizer_introduction_cookbook
-          - page: Synthetic Data
+          - page: Synthetic data optimizer
             icon: fa-regular fa-book
             path: docs/agent_optimization/cookbook/synthetic_data_optimizer_cookbook.mdx
             slug: synthetic_data_optimizer_cookbook
+          - page: Coming soon
+            icon: fa-regular fa-circle-plus
+            path: docs/agent_optimization/cookbook/future_cookbooks.mdx
+            slug: future_cookbooks
       - section: Advanced Topics
         slug: /advanced
         contents:
-          - page: Extending Optimizers
+          - page: Extending optimizers
             icon: fa-regular fa-puzzle-piece
             path: docs/agent_optimization/algorithms/extending_optimizers.mdx
             slug: extending_optimizers
+          - page: Custom metrics
+            icon: fa-regular fa-sliders
+            path: docs/agent_optimization/advanced/custom_metrics.mdx
+            slug: custom_metrics
+          - page: Chaining optimizers
+            icon: fa-regular fa-objects-align-bottom
+            path: docs/agent_optimization/advanced/chaining_optimizers.mdx
+            slug: chaining_optimizers
+          - page: API Reference
+            icon: fa-regular fa-square-terminal
+            path: docs/agent_optimization/opik_optimizer/reference.mdx
+            slug: api_reference
   - tab: self-host
     layout:
       - page: Overview
