--- a/apps/opik-backend/pom.xml
+++ b/apps/opik-backend/pom.xml
@@ -16,11 +16,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <dropwizard.version>4.0.14</dropwizard.version>
+        <dropwizard.version>5.0.0</dropwizard.version>
         <swagger.version>2.2.33</swagger.version>
         <lombok.version>1.18.38</lombok.version>
         <mysql.version>9.5.0</mysql.version>
-        <dropwizard-guicey.version>7.2.1</dropwizard-guicey.version>
+        <dropwizard-guicey.version>8.0.0</dropwizard-guicey.version>
         <stringtemplate.version>3.50.0</stringtemplate.version>
         <jakarta.annotation.version>3.0.0</jakarta.annotation.version>
         <liquibase-clickhouse.version>0.7.2</liquibase-clickhouse.version>
@@ -29,7 +29,7 @@
         <org.mapstruct.version>1.6.3</org.mapstruct.version>
         <testcontainers.version>2.0.1</testcontainers.version>
         <uuid.java.generator.version>5.1.0</uuid.java.generator.version>
-        <wiremock.version>3.13.0</wiremock.version>
+        <wiremock.version>3.13.1</wiremock.version>
         <redisson.version>3.52.0</redisson.version>
         <opentelmetry.version>2.21.0</opentelmetry.version>
         <aws.java.sdk.version>2.38.2</aws.java.sdk.version>
@@ -124,6 +124,10 @@
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.ee10</groupId>
+            <artifactId>jetty-ee10-servlets</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -308,7 +312,7 @@
 
         <dependency>
             <groupId>org.wiremock</groupId>
-            <artifactId>wiremock</artifactId>
+            <artifactId>wiremock-jetty12</artifactId>
             <version>${wiremock.version}</version>
             <scope>test</scope>
         </dependency>
