[OPIK-2974] [BE] Add metrics-based alerting for cost and latency thresholds (#3974)
* Add MetricsAlertJob

* add tests

* change latency threshold to seconds

* minor improvements

* address comments

* adjust timing

* address comments

* Address github pr comments (#4047)

* Revision 3: Address GitHub PR review comments

- Migrate MetricsAlertJob from ScheduledExecutorService to Quartz with @DisallowConcurrentExecution
- Extract Unix epoch timestamp as named constant in ProjectMetricsDAO
- Convert Map to MetricsAlertPayload DTO in SlackWebhookPayloadMapper
- Add comment explaining event type replacement in AlertResourceTest
- Change rollback statement to empty in database migration
- Improve code clarity and maintainability per reviewer feedback

* Revision 4: Fix migration rollback to 'rollback empty'

* Revision 5: Make MetricsAlertJob interval configurable

- Remove hardcoded @Every("5m") annotation from MetricsAlertJob
- Schedule MetricsAlertJob programmatically in OpikGuiceyLifecycleEventListener
- Use webhookConfig.metrics.initialDelay and fixedDelay for configurable scheduling
- Calculate lock duration dynamically based on configured job interval
- Follow same pattern as TraceThreadsClosingJob for consistency

* Revision 6: Fix test to match MetricsAlertPayload DTO structure

- Remove event_type check from test as it's not part of the DTO
- Event type is redundant in payload since it's known from trigger context
- Add comment explaining why event_type is not in the payload

* Revision 7: Revert Unix epoch constant extraction to fix Spotless error

- Cannot concatenate constants inside text blocks with triple-quote syntax
- Revert to inline hardcoded values to avoid syntax errors
- This is a limitation of Java text blocks - constants cannot be embedded mid-block

* Revision 8: Fix compilation error - use getWebhook() instead of getWebhookConfig()

* Revision 9: Add defensive error handling for MetricsAlertJob scheduling

- Add null checks for webhook config 

--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -667,3 +667,16 @@ webhook:
     # Default: 100ms
     # Description: Maximum time to wait for acquiring alert job lock
     alertJobLockWaitTimeout: ${WEBHOOK_DEBOUNCING_ALERT_JOB_LOCK_WAIT_TIMEOUT:-100ms}
+  metrics:
+    # Default: 300s
+    # Description: Initial delay before the first metrics alert job execution
+    initialDelay: ${WEBHOOK_METRICS_INITIAL_DELAY:-300s}
+    # Default: 300s
+    # Description: Fixed delay between metrics alert job executions (waits this duration after completion)
+    fixedDelay: ${WEBHOOK_METRICS_FIXED_DELAY:-300s}
+    # Default: 60s
+    # Description: Timeout for metrics alert job execution
+    metricsAlertJobTimeout: ${WEBHOOK_METRICS_ALERT_JOB_TIMEOUT:-60s}
+    # Default: 1s
+    # Description: Maximum time to wait for acquiring metrics alert job lock
+    metricsAlertJobLockWaitTimeout: ${WEBHOOK_METRICS_ALERT_JOB_LOCK_WAIT_TIMEOUT:-1s}
