[OPIK-3049] [P SDK] Added documentation describing anonymizers use in OPIK.

--- a/apps/opik-documentation/documentation/fern/docs.yml
+++ b/apps/opik-documentation/documentation/fern/docs.yml
@@ -317,6 +317,9 @@ navigation:
           - page: Guardrails
             path: docs/production/guardrails.mdx
             slug: guardrails
+          - page: Anonymizers
+            path: docs/production/anonymizers.mdx
+            slug: anonymizers
           - page: Alerts
             path: docs/production/alerts.mdx
             slug: alerts
