[NA] [DOCS] Add troubleshooting guide for ClickHouse Zookeeper metadata issues

--- a/apps/opik-documentation/documentation/fern/docs.yml
+++ b/apps/opik-documentation/documentation/fern/docs.yml
@@ -767,6 +767,9 @@ navigation:
       - page: Advanced clickhouse backup
         path: docs/self-host/backup.mdx
         slug: backup
+      - page: Troubleshooting
+        path: docs/self-host/troubleshooting.mdx
+        slug: troubleshooting
       - section: Configuration
         slug: /configure
         contents:
