--- a/sdks/opik_optimizer/pyproject.toml
+++ b/sdks/opik_optimizer/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "gepa>=0.0.7",
     "hf_xet",
     "litellm<=1.75.6",
+    "mcp>=1.0.0",
     "opik>=1.9.7",
     "optuna",
     "pandas",
