--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -215,6 +215,9 @@ batchOperations:
     # Description: The maximal number of ids to be used for IN clause. Find requests with a larger number of ids will
     # involve the use of temp tables for querying
     maxExperimentInClauseSize: ${BATCH_OPERATIONS_MAX_EXPERIMENT_IN_CLAUSE_SIZE:-5000}
+    # Default: 1000
+    # Description: The batch size for processing CSV files. Dataset items are saved to the database in batches of this size.
+    csvBatchSize: ${BATCH_OPERATIONS_CSV_BATCH_SIZE:-1000}
 
 # Configuration for rate limit. This is not enabled by default for open source installations.
 # If enabled, rate limit is applied to creation and update of various entities including traces, spans, projects,
