--- a/deployment/docker-compose/nginx_guardrails_local.conf
+++ b/deployment/docker-compose/nginx_guardrails_local.conf
@@ -15,6 +15,9 @@ server {
     access_log /dev/stdout;
     error_log /dev/stderr;
 
+    # Set maximum upload size for all requests (especially for CSV uploads)
+    client_max_body_size 2000M;
+
     location /api/ {
         rewrite /api/(.*) /$1  break;
         proxy_pass http://backend:8080;
@@ -28,7 +31,6 @@ server {
         proxy_send_timeout 90;
 
         proxy_http_version 1.1;
-        client_max_body_size 500M;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
@@ -46,7 +48,6 @@ server {
         proxy_send_timeout 90;
 
         proxy_http_version 1.1;
-        client_max_body_size 500M;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
