--- a/deployment/helm_chart/opik/templates/configmap-frontend-nginx.yaml
+++ b/deployment/helm_chart/opik/templates/configmap-frontend-nginx.yaml
@@ -23,7 +23,8 @@ data:
     limit_req_log_level info;
     limit_req_status 429;
     map_hash_bucket_size 256;
-    client_max_body_size 500M;
+    # Increased to 2GB to support large CSV uploads (OPIK-3077)
+    client_max_body_size 2000M;
   {{- with .Values.component.frontend.additionalNginxSettings }}
     {{- . | nindent 4 }}
   {{- end }}
@@ -86,6 +87,11 @@ data:
         {{- range $k, $v := .Values.component.frontend.upstreamConfig }}
             {{ $k }} {{ $v }};
         {{- end }}
+
+            # Increased timeouts for large CSV upload processing (OPIK-3077)
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
