--- a/deployment/helm_chart/opik/templates/configmap-frontend-nginx.yaml
+++ b/deployment/helm_chart/opik/templates/configmap-frontend-nginx.yaml
@@ -23,8 +23,8 @@ data:
     limit_req_log_level info;
     limit_req_status 429;
     map_hash_bucket_size 256;
-    # Default body size limit - specific routes can override
-    client_max_body_size 100M;
+    # Increased to 2GB to support large CSV uploads (OPIK-3077)
+    client_max_body_size 2000M;
   {{- with .Values.component.frontend.additionalNginxSettings }}
     {{- . | nindent 4 }}
   {{- end }}
@@ -89,32 +89,6 @@ data:
         {{- end }}
 
             # Increased timeouts for large CSV upload processing (OPIK-3077)
-            proxy_read_timeout 300s;
-            proxy_connect_timeout 300s;
-            proxy_send_timeout 300s;
-
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-        
-        # Specific location for CSV upload with larger body size limit (OPIK-3077)
-        location ^~ {{ $rootPath }}/api/v1/private/datasets/items/from-csv {
-            # Allow up to 2GB file uploads for CSV processing
-            client_max_body_size 2000M;
-            
-            rewrite /api/(.*) /$1  break;
-            proxy_pass http://backend;
-            proxy_redirect  off;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        {{- range $k, $v := .Values.component.frontend.upstreamConfig }}
-            {{ $k }} {{ $v }};
-        {{- end }}
-
-            # Increased timeouts for large CSV upload processing
             proxy_read_timeout 300s;
             proxy_connect_timeout 300s;
             proxy_send_timeout 300s;
