OPIK-3077 properly set the bundle

--- a/apps/opik-backend/pom.xml
+++ b/apps/opik-backend/pom.xml
@@ -134,6 +134,10 @@
             <artifactId>jersey-media-multipart</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-forms</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
